create welcome page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav>
+      <%= link_to('Home', root_path)%>
+      <%= yield %>
+    </nav>
   </body>
 </html>
